syntax = "proto3";

option csharp_namespace = "Pitch.Grpc.Protos";

service PitchProtoService {
  rpc GetMostSuitablePitch (GetMostSuitablePitchRequest) returns (MostSuitablePitchResponse);
}


message GetMostSuitablePitchRequest {
	string storeId = 1;
	int32 price = 2;
}

message MostSuitablePitchResponse{
	int32 pitchId = 1;
	string pitchName = 2;
	string storeName = 3;
	string address = 4;
	int32 price = 5;
}